[gd_scene load_steps=5 format=3 uid="uid://ceymtxq1tbsin"]

[ext_resource type="StyleBox" uid="uid://dvs4ap0mdc3ut" path="res://Resources/Prototype/button-normal.tres" id="1_12kas"]
[ext_resource type="Script" path="res://Src/authentication.gd" id="1_438bd"]
[ext_resource type="StyleBox" uid="uid://b3fs8writruqt" path="res://Resources/Prototype/button-hover.tres" id="2_lijxd"]
[ext_resource type="StyleBox" uid="uid://cku7nkflrk7k4" path="res://Resources/Prototype/button-pressed.tres" id="3_hi63d"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_438bd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.198
anchor_right = 0.889
anchor_bottom = 0.79
offset_left = 0.127991
offset_top = -0.304016
offset_right = -0.128052
offset_bottom = 0.0799866
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
placeholder_text = "Enter Usename"
alignment = 1

[node name="Connectbutton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("1_12kas")
theme_override_styles/hover = ExtResource("2_lijxd")
theme_override_styles/pressed = ExtResource("3_hi63d")
text = "Submit"

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("1_12kas")
theme_override_styles/hover = ExtResource("2_lijxd")
theme_override_styles/pressed = ExtResource("3_hi63d")
text = "Return"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("1_12kas")
theme_override_styles/hover = ExtResource("2_lijxd")
theme_override_styles/pressed = ExtResource("3_hi63d")
text = "Quit"

[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Connectbutton" to="." method="_on_connectbutton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
